2003-08-30  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm  (_get_msg_data)  Improve MIME
	entity validation.

	* lib/Mj/Resend.pm  (_r_ck_body, _add_fters) Improve 
	validation of MIME body parts.

2003-08-13  Michael Yount <csf@moscow.com>

	* lib/Mj/Resend.pm:  (_r_strip_body)  Bugfix:  allow
	single-part HTML messages to be cleaned.
	(clean_text)  Distinguish empty elements from elements
	with content.
	Process the decoded, not encoded, text.

	* lib/Mj/Util.pm:  (plain_to_hyper)  Change the escape()
	calling conventions
	(clean_html)  Distinguish empty elements from elements
	with content.
	
2003-08-12  Michael Yount <csf@moscow.com>

	* lib/Mj/Resend.pm:  (_r_strip_body)  Bugfix:  preserve
	the original character set and encoding of altered
	message parts.
	(_format_text)  Process the decoded, not encoded, text.

2003-06-20  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (connect)  Close the session handle
	explicitly to avoid potential descriptor leak.

	* lib/Mj/Token.pm:  Improve error checking when 
	_make_tokendb is called.

2003-06-12  Michael Yount <csf@moscow.com>

	* bin/mj_wwwusr:  Give a clearer response when someone signs
	in.  Suggested by Roger Klorese.

2003-06-08  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (parse_taboo_body, parse_taboo_headers)
	Bugfix:  Skip lines that have no pattern.
	Thanks to Roger Klorese.

2003-06-06  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (parse_bounce_rules)  Bugfix:  Add
	missing "use" declaration.

2003-05-29  Michael Yount <csf@moscow.com>

	* bin/mj_email, mj_queuerun:  (connect_and_parse)  Discard the
	message instead of forwarding it if the connection fails.

	* lib/Majordomo.pm:  Version number is now 0.1200305290.
	(connect)  Integrate the block_headers setting with the
	access_rules setting.

	* lib/Mj/Access.pm:  (check_headers)  Integrate the
	block_headers setting with the access_rules setting.
	(_d_access)  Deny connections if one of the block_headers